--- a/public/global.css
+++ b/public/global.css
@@ -13,7 +13,6 @@ body {
 }
 
 a {
-    color: rgb(0,80,160);
 	text-decoration: none;
 }
 
@@ -21,9 +20,6 @@ a:hover {
 	text-decoration: none;
 }
 
-a:visited {
-	color: rgb(0,80,160);
-}
 
 label {
 	display: block;
@@ -68,11 +64,16 @@ button:focus {
 .sidebar {
 }
 
-.sidebar .nav-link.active {
-	color: #007bff;
-}
-
 .sidebar .nav-link {
 	font-weight: 500;
 	color: #333;
+    white-space: nowrap;
+}
+
+.nav-item .nav-icon {
+    margin-left: 0.05rem;
+    font-size: 1.2rem;
+    margin-right: 0.2rem;
+    text-align: center;
+    width: 1.6rem;
 }
